[gd_scene load_steps=3 format=2]

[ext_resource path="res://tscn/NumberBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://tscn/Guess.gd" type="Script" id=2]

[node name="Guess" type="Node2D"]
script = ExtResource( 2 )

[node name="NumberBox1" parent="." instance=ExtResource( 1 )]

[node name="NumberBox2" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 0 )

[node name="NumberBox3" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, 0 )

[node name="NumberBox4" parent="." instance=ExtResource( 1 )]
position = Vector2( 272, 0 )

[node name="NumberBox5" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 0 )

[node name="NumberBox6" parent="." instance=ExtResource( 1 )]
position = Vector2( 448, 0 )

[node name="NumberBox7" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 0 )

[node name="NumberBox8" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 0 )
